# capnproto-pypi

./: .gitignore  .gitmodules  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build.yaml
scripts/: build.sh
