[build-system]
requires = ["hatchling", "cmake", "ninja"]
build-backend="hatchling.build"

[project]
name = "capnproto"
authors = [{name = "the capnproto-pypi authors", email = "dev@1kbgz.com"}]
description="Cap’n Proto is an insanely fast data interchange format and capability-based RPC system."
readme = "README.md"
license = { text = "Apache-2.0" }
version = "1.3.0rc1"
requires-python = ">=3.10"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = []

[project.optional-dependencies]
develop = [
    "build",
    "cibuildwheel",
    "hatchling",
    "twine",
    "wheel",
]

[project.urls]
Repository = "https://github.com/1kbgz/capnproto-pypi"
Homepage = "https://github.com/1kbgz/capnproto-pypi"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
before-all ="""
cmake -B build src -DBUILD_TESTING=OFF -DCMAKE_INSTALL_PREFIX=capnproto && \
cmake --build build --config Release -j 3 && \
cmake --install build && \
rm -rf src build .gitmodules
"""
test-command = "echo 'TODO'"
test-requires = []

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel -v show {wheel} && LD_LIBRARY_PATH=/project/uhdm/lib auditwheel -v repair -w {dest_dir} {wheel}"
skip = "*i686"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET=11.0}
archs = "arm64"

[tool.cibuildwheel.windows]
archs = "AMD64"
skip = "*win32 *arm_64"

[tool.hatch.build]
artifacts = [
    "capnproto/bin/",
    "capnproto/include/",
    "capnproto/lib/",
    "capnproto/lib64/",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["capnproto"]
exclude = [
    "/.github",
    "/scripts",
    "/src",
    "/.gitmodules",
    "/.gitignore",
    "/pyproject.toml",
]
